--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^18.0.6",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "aws-sdk": "^2.1212.0",
